--- a/app/views/psd-revised-flow/search/notifications.html
+++ b/app/views/psd-revised-flow/search/notifications.html
@@ -343,7 +343,7 @@
             </tr>
             <tr class="govuk-table__row" style="display: none;">
               <td class="govuk-table__cell" >
-                <a href="notification" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;" >Swan Gas Hob elbow joint failure</a>
+                <a href="notification-1" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;" >Swan Gas Hob elbow joint failure</a>
                 <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2401-0067</p>
                 <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>SWA-94673-59N</p>
                 <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Serious risk of poisoning, burns or gas explosion and/or fire</p>
