--- a/app/views/psd-revised-flow/search/product-1.html
+++ b/app/views/psd-revised-flow/search/product-1.html
@@ -31,7 +31,7 @@
       <span class="govuk-caption-m"><strong>PSD ref: </strong>2401-0067</span>
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
       <p class="govuk-body-s govuk-!-margin-bottom-1"><strong>Product record owner:</strong> <a href="#">OPSS Incident Management</a></p>
-      <p class="govuk-body-s govuk-!-margin-bottom-1"><strong>Created:</strong> 3 January 2024</p>
+      <p class="govuk-body-s govuk-!-margin-bottom-1"><strong>Created:</strong> 25 January 2023</p>
       <p class="govuk-body-s govuk-!-margin-bottom-8"><strong>Last updated:</strong> 14 February 2024</p>
 
       <h2 class="govuk-heading-m ">Product details</h2>
@@ -142,12 +142,12 @@
     <dl class="govuk-summary-list govuk-!-margin-bottom-8">
       <div class="govuk-summary-list__row">
         <dd class="govuk-summary-list__value"  style="font-weight: 700; color: #1d70b8;">
-          Swan Gas Hobs: Serious risk of poisoning <br ><p class="govuk-body-s govuk-!-margin-top-1" style="color: #505a5f;">6 July 2023</p>
+          <a href="notification-2" style="color: #1d70b8; text-decoration: none" >Swan Gas Hobs: Serious risk of fire</a> <br ><p class="govuk-body-s govuk-!-margin-top-1" style="color: #505a5f;">6 July 2023</p>
         </dd>
       </div>
       <div class="govuk-summary-list__row">
         <dd class="govuk-summary-list__value"  style="font-weight: 700; color: #1d70b8" >
-          Swan Gas Hobs: Serious risk of poisoning, burns or gas explosion and/or fire <br ><p class="govuk-body-s govuk-!-margin-top-1" style="color: #505a5f;">14 February 2024</p>
+          <a href="notification" style="color: #1d70b8; text-decoration: none" >Swan Gas Hobs: Serious risk of poisoning, burns or gas explosion and/or fire</a>  <br ><p class="govuk-body-s govuk-!-margin-top-1" style="color: #505a5f;">14 February 2024</p>
         </dd>
       </div>
   
