--- a/app/views/psd-revised-flow/search/products.html
+++ b/app/views/psd-revised-flow/search/products.html
@@ -438,7 +438,7 @@
                     <img src="../../public/images/small-hob.png" alt="Image" class="table-image">
                   </div>
                   <div class="text-container">
-                    <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="product">Swan Gas Hob SXB7040B 60cm</a>
+                    <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="product-1">Swan Gas Hob SXB7040B 60cm</a>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Gas appliances and components</p>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Gas hob</p>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>2401-0067</p>
@@ -457,7 +457,35 @@
                   </div>
               </td>
               <td class="govuk-table__cell">14 Feb 2024</td>
+            </tr>    
+            <tr class="govuk-table__row" style="display: none;">
+              <td class="govuk-table__cell">
+                <div class="table-container">
+                  <div class="image-table-container">
+                    <img src="../../public/images/small-hob-2.png" alt="Image" class="table-image">
+                  </div>
+                  <div class="text-container">
+                    <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="product-2">Swan Gas Hob SXB75260SS 60cm</a>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Gas appliances and components</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Gas hob</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>6134-1454</p>
+                    <details class="govuk-details govuk-!-margin-bottom-0">
+                      <summary class="govuk-details__summary govuk-body-xs">
+                        <span class="govuk-details__summary-text">
+                          More details
+                        </span>
+                      </summary>
+                      <div class="govuk-details__text">
+                        <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Barcode: </strong>4 346432 754322</p>
+                        <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Other product identifiers: </strong>ASIN: 534226</p>    
+                        <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Description: </strong>Comes in box 90 x 90 x 40 cm, weight 3.6kg, 4 gas burners, 4 knobs, silver.</p>    
+                    </details>
+                      </div>
+                  </div>
+              </td>
+              <td class="govuk-table__cell">14 Feb 2024</td>
             </tr>                                         
+                                     
                                  
           </tbody>
         </table>
