--- a/app/views/psd-revised-flow/search/search-results.html
+++ b/app/views/psd-revised-flow/search/search-results.html
@@ -115,24 +115,40 @@
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
             <dd class="govuk-summary-list__value">
-              <a href="notification" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Gas Hob elbow joint failure</a>
+              <a href="notification-1" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Gas Hob by Swan: Risk of fire and poisoning</a>
               <p class="govuk-body-xs govuk-!-margin-bottom-2" style="color: #505A5F;">Notification</p>
-              <p class="govuk-body-s">Product Safety Report for Swan Gas Hobs presenting a serious risk of poisoning, burns or gas explosion and/or fire.</p>
+              <p class="govuk-body-s">Notification for Swan gas hob SXB7040B 60cm presenting a serious risk of poisoning or fire.</p>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dd class="govuk-summary-list__value">
+              <a href="notification-2" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Gas Hobs: Serious risk of fire</a>
+              <p class="govuk-body-xs govuk-!-margin-bottom-2" style="color: #505A5F;">Notification</p>
+              <p class="govuk-body-s">Notification for multiple Swan gas hobs presenting a serious risk of fire.</p>
+            </dd>
+          </div>
+
+
+          <div class="govuk-summary-list__row">
+            <dd class="govuk-summary-list__value">
+              <a href="product-1" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Gas Hob SXB7040B 60cm</a>
+              <p class="govuk-body-xs govuk-!-margin-bottom-2" style="color: #505A5F;">Product</p>
+              <p class="govuk-body-s">Four burner, gun metal grey, gas hob made by Swan </p>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dd class="govuk-summary-list__value">
+              <a href="product-2" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Gas Hob SXB75260SS 60cm</a>
+              <p class="govuk-body-xs govuk-!-margin-bottom-2" style="color: #505A5F;">Product</p>
+              <p class="govuk-body-s">Four burner, silver, gas hob made by Swan </p>
             </dd>
           </div>
 
           <div class="govuk-summary-list__row">
             <dd class="govuk-summary-list__value">
-              <a href="product" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Gas Hob SXB7040B 60cm</a>
-              <p class="govuk-body-xs govuk-!-margin-bottom-2" style="color: #505A5F;">Product</p>
-              <p class="govuk-body-s">The joints on these hobs are faulty which can lead to gas fires / explosions</p>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dd class="govuk-summary-list__value">
               <a href="risk-assessment" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Gas Hob SXB7040B 60cm risk assessment</a>
               <p class="govuk-body-xs govuk-!-margin-bottom-2" style="color: #505A5F;">Risk assessment</p>
-              <p class="govuk-body-s">Hazard: The hobs present a serious risk of poisoning, burns or gas explosion and/or fire.</p>
+              <p class="govuk-body-s">Hazard: The hobs present a serious risk of poisoning or fire.</p>
             </dd>
           </div>
           <div class="govuk-summary-list__row">
@@ -145,7 +161,7 @@
             <dd class="govuk-summary-list__value">
               <a href="#" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Trading Ltd</a>
               <p class="govuk-body-xs govuk-!-margin-bottom-2" style="color: #505A5F;">Business</p>
-              <p class="govuk-body-s">Swan Trading Ltd specialises in providing fixing brackets for Pindhurst Level Machinary across the EU and UK.</p>
+              <p class="govuk-body-s">Swan Trading Ltd specialises in production of gas ovens, hobs and fires.</p>
             </dd>
           </div>
         </dl>
