--- a/app/views/layout-new-header-account-settings.html
+++ b/app/views/layout-new-header-account-settings.html
@@ -117,8 +117,10 @@ function toggleSearch() {
 
   document.addEventListener("DOMContentLoaded", function() {
     var countries = [
-    {name: "Swan Gas Hob elbow joint failure", info: "Notification", url: "notification"},
-    {name: "Swan Gas Hob SXB7040B 60cm", info: "Product", url: "product"},
+    {name: "Gas Hob by Swan: Risk of fire and poisoning", info: "Notification", url: "notification-1"},
+    {name: "Swan Gas Hobs: Serious risk of fire", info: "Notification", url: "notification-2"},
+    {name: "Swan Gas Hob SXB7040B 60cm", info: "Product", url: "product-1"},
+    {name: "Swan Gas Hob SXB75260SS 60cm", info: "Product", url: "product-2"},
     {name: "Swan Gas Hob SXB7040B 60cm risk assessment", info: "Risk assessment", url: "risk-assessment"},
     {name: "Swan Gas Hob: Test report 1209357862.docx", info: "Document", url: "../../public/pdfs/test-report.pdf"},
     {name: "Swan Trading Ltd", info: "Business"},
