--- a/app/assets/sass/new-header.scss
+++ b/app/assets/sass/new-header.scss
@@ -160,7 +160,7 @@ body .autocomplete-input:focus {
   max-height: 255px;
   overflow-y: auto;
   width: 585px;
-  box-shadow: 0px 1px 0px 0px #b1b4b6;
+  box-shadow: 0 1px 0 0 #b1b4b6;
 }
 
 .search-button2 {
