--- a/app/views/psd-revised-flow/search/product-1.html
+++ b/app/views/psd-revised-flow/search/product-1.html
@@ -147,10 +147,9 @@
       </div>
       <div class="govuk-summary-list__row">
         <dd class="govuk-summary-list__value"  style="font-weight: 700; color: #1d70b8" >
-          <a href="notification" style="color: #1d70b8; text-decoration: none" >Swan Gas Hobs: Serious risk of poisoning, burns or gas explosion and/or fire</a>  <br ><p class="govuk-body-s govuk-!-margin-top-1" style="color: #505a5f;">14 February 2024</p>
+          <a href="notification-1" style="color: #1d70b8; text-decoration: none" >Gas Hob by Swan: Risk of fire and poisoning</a>  <br ><p class="govuk-body-s govuk-!-margin-top-1" style="color: #505a5f;">14 February 2024</p>
         </dd>
       </div>
-  
     </dl>
   
 
